<resources>
    <string name="app_name">Demo</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="user_label">Usuario</string>
    <string name="user_hint">Introduce DNI</string>
    <string name="passwd_label">Contraseña</string>
    <string name="passwd_hint">Introduce password</string>
    <string name="login_button">Acceder</string>
    <string name="new_test">Nuevo Test</string>
    <string name="new_exercise">Nuevo Ejercicio</string>
    <string name="stadistics">Seguimiento</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="button_send">Enviar</string>
    <string name="button_help">Ver ayuda</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="exercise_send_file">Subir Fichero</string>
    <string name="exercise_send_foto">Sacar Foto</string>
    <string name="exercise_send_audio">Grabar Audio</string>
    <string name="exercise_send_video">Grabar Video</string>
    <string name="no_camera">No hay cámara en el dispositvo</string>
    <string name="no_micro">No hay micrófono en el dispositvo</string>
    <string name="no_app">No hay aplicaciones en el dispositivo para ello</string>
    <string name="bad_dni">Introduzca un formato correcto de DNI</string>
    <string name="server_error">Error reciviendo respuesta del servidor</string>
    <string name="upload_error">Error enviando respuesta</string>
</resources>
